<resources>

    <string name="app_name">ONScripter-SAO</string>
    
    <string name="menu_settings">设置</string>
    <string name="menu_end">退出</string>
    
    <string name="title_activity_main">ONScripter</string>
    <string name="alt_cover">封面图片</string>
    <string name="alt_background">背景</string>
    <string name="alt_icon">图标</string>
    <string name="alt_about">关于</string>
    <string name="alt_settings">设置</string>
    <string name="alt_config">选项</string>
    <string name="alt_play">运行</string>
    
    <string name="mediacontroller_play_pause">Play/Pause</string>
    
    <string name="notify_exit">再按一次回退键退出</string>
    
    <string name="error_play_audio">播放主题音乐时出现错误，播放取消</string>
    <string name="error_play_video">播放预览视频时出现错误，播放取消</string>
    
    <string name="error_repeated_playfail">如果您一直出现播放问题，我们建议您使用菜单中的\'退出\'彻底退出程序并重新启动</string>
    
    <string name="error">错误</string>
    <string name="known">我知道了</string>
    <string name="no_sdcard_dir">没有在SD卡下找到ONS目录，请手工创建并将游戏资料放入目录</string>

    <!-- Strings Used By ONScripter -->
    
    <string name="version">引擎版本ONScripter-20121006</string>
    
    <!-- Side Control Buttons -->
    <string name="button_rclick">Right Click</string>
    <string name="button_lclick">Left Click</string>
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    
    <!-- Menu Items -->
    <string name="menu_automode">切换自动模式</string>
    <string name="menu_skip">快进</string>
    <string name="menu_speed">切换速度</string>
    <string name="menu_show_buttons">显示控制按钮</string>
    <string name="menu_hide_buttons">隐藏控制按钮</string>
    <string name="menu_topleft">默认显示</string>
    <string name="menu_center">居中显示</string>
    <string name="menu_version">版本信息</string>
    
    <string name="warning">警告</string>
    <string name="information">信息</string>
    <string name="font_not_found">\'%s\'没有相应的default.ttf字体文件，使用默认字体么？</string>
    <string name="font_use_default">使用默认字体</string>
    <string name="cancel">取消</string>
    <string name="create_shortcut">是否为\'%s\'创建桌面快捷方式？</string>
    <string name="create_shortcut_granted">创建</string>
    <string name="create_shortcut_cancel">取消</string>
    
    <string name="toast_cant_create_shortcut_for_invalid">该目录不是一个ONScripter游戏，不能为其创建快捷方式</string>
    <string name="toast_cant_run_for_invalid">该目录不是一个ONScripter游戏，不能用于运行模拟器</string>
    <string name="toast_cant_config_for_invalid">该目录不是一个ONScripter游戏，无法打开设置面板</string>
    
</resources>