<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <!-- 1x = 9dip -->
    
    <ImageView
        android:id="@+id/icon"
        android:layout_width="36dip"
        android:layout_height="36dip"
        android:contentDescription="@string/alt_icon"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="9dip"
        android:layout_marginTop="24dip"
        android:layout_marginBottom="24dip"
        android:layout_centerVertical="true"
        android:src="@drawable/test_icon_0" />
    
    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/icon"
        android:textSize="24dip"
        android:layout_marginLeft="9dip"
        android:layout_marginRight="18dip"
        android:typeface="sans"
        android:textColor="#757575"
        android:singleLine="true" />
    
    <LinearLayout
        android:id="@+id/start_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon"
        android:layout_centerVertical="true"
        android:paddingLeft="40dip"
        android:paddingRight="40dip"
        android:background="@color/sao_transparent_orange"
        android:visibility="gone">
        
        <ImageView
	        android:id="@+id/btn_config"
	        android:layout_weight="1"
	        android:layout_width="48dip"
	        android:layout_height="48dip"
	        android:contentDescription="@string/alt_config"
	        android:clickable="true"
	        android:src="@drawable/config_button" />
        
        <ImageView
	        android:id="@+id/btn_play"
	        android:layout_weight="1"
	        android:layout_width="48dip"
	        android:layout_height="48dip"
	        android:contentDescription="@string/alt_play"
	        android:clickable="true"
	        android:src="@drawable/play_button" />
        
    </LinearLayout>
        
        
    
</RelativeLayout>