<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/alt_background"
        android:scaleType="centerCrop"
        android:src="@drawable/dbkg_und_blur" />
    
    <ListView
        android:id="@+id/games"
        android:layout_width="311dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="24dip"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="3dip"
        android:scrollbars="none"
        android:requiresFadingEdge="vertical"
        android:cacheColorHint="#00000000"
        android:fadingEdgeLength="48dip" />

    <RelativeLayout
        android:id="@+id/coverframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
	    android:layout_toRightOf="@id/games"
        android:layout_marginBottom="80dip"
        android:layout_marginTop="20dip">
        
	    <ImageView
	        android:id="@+id/cover"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:contentDescription="@string/alt_cover"
	        android:scaleType="fitCenter"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:layout_marginBottom="20dip"
        	android:layout_marginTop="20dip"
	        android:src="@drawable/dbkg_und" />
		
	    <RelativeLayout
	        android:id="@+id/videoframe"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:layout_marginBottom="20dip"
        	android:layout_marginTop="20dip"
            android:background="#000000"
            android:visibility="gone">

	        <org.hanenoshino.uisao.widget.VideoView
	            android:id="@+id/surface_view"
	            android:visibility="gone"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_centerInParent="true"/>

        </RelativeLayout>
    
    </RelativeLayout>

    <TextView
        android:id="@+id/gametitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/coverframe"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:textColor="@color/sao_white"
        android:textSize="18sp"
        android:gravity="center"
        android:shadowColor="@color/sao_grey"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>
    
    <RelativeLayout 
        android:layout_width="170dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="20dip">
        
        <ImageView
	        android:id="@+id/btn_about"
	        android:layout_width="80dip"
	        android:layout_height="80dip"
	        android:layout_alignParentLeft="true"
	        android:contentDescription="@string/alt_about"
	        android:clickable="true"
	        android:background="@drawable/about_button" />
        
        <ImageView
	        android:id="@+id/btn_settings"
	        android:layout_width="80dip"
	        android:layout_height="80dip"
	        android:layout_alignParentRight="true"
	        android:contentDescription="@string/alt_settings"
	        android:clickable="true"
	        android:background="@drawable/settings_button" />
        
    </RelativeLayout>
    
</RelativeLayout>
